// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox Basic 1`] = `
<div
  className="css-ql39e"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="css-1mfehrt"
      display="inline-flex"
    >
      <input
        aria-describedby="12"
        className="css-l5ph6c"
        clip="rect(0 0 0 0)"
        disabled={false}
        id="id"
        name="checkbox"
        onChange={[Function]}
        overflow="hidden"
        size="size0"
        type="checkbox"
      />
      <label
        className="css-1ruk2nu"
        display="block"
        htmlFor="id"
      >
        <span
          className="css-ken708"
          display="flex"
        >
          <span
            className="css-19tcioy"
            color="colorText"
            cursor="pointer"
            fontSize="fontSize30"
            fontWeight="fontWeightSemibold"
          >
            <span
              className="css-sncxrr"
              display="flex"
            >
              <span
                aria-hidden="true"
                className="css-1qnp08n"
                display="flex"
                height="sizeSquare50"
                type="checkbox"
                width="sizeSquare50"
              >
                <span
                  className="css-1ls7lvh"
                  color="colorTextInverse"
                  display="block"
                  size="sizeIcon10"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby="CheckboxCheckIcon-13"
                    height="100%"
                    role="img"
                    viewBox="0 0 20 20"
                    width="100%"
                  >
                    <path
                      d="M15.59 5.916a1.386 1.386 0 00-1.98 0l-5.04 5.138L6.39 8.83a1.38 1.38 0 00-1.98 0 1.448 1.448 0 000 2.018l3.171 3.233a1.382 1.382 0 001.98 0l6.03-6.148a1.448 1.448 0 000-2.018z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <span
                className="css-pmq22s"
                color="currentColor"
                fontSize="fontSize30"
                fontWeight="fontWeightNormal"
              >
                I declare the information provided above is accurate. I acknowledge that Twilio will process the information provided above for the purpose of identity verification, and will be sharing it with my local telecomm providers or authorities where required by local law. I understand that Twilio phone numbers may be taken out of service for inaccurate or false information.
              </span>
            </span>
          </span>
        </span>
      </label>
    </div>
    <button
      aria-busy="false"
      className="css-1kmjss9"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-18yvwyy"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots CheckboxDisclaimer Basic 1`] = `
<div
  className="css-ql39e"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="css-12wrqhy"
    >
      <div
        className="css-1mfehrt"
        display="inline-flex"
      >
        <input
          aria-describedby="14"
          aria-invalid={false}
          className="css-l5ph6c"
          clip="rect(0 0 0 0)"
          disabled={false}
          id="id"
          name="checkbox"
          onChange={[Function]}
          overflow="hidden"
          size="size0"
          type="checkbox"
        />
        <label
          className="css-1ruk2nu"
          display="block"
          htmlFor="id"
        >
          <span
            className="css-ken708"
            display="flex"
          >
            <span
              className="css-19tcioy"
              color="colorText"
              cursor="pointer"
              fontSize="fontSize30"
              fontWeight="fontWeightSemibold"
            >
              <span
                className="css-sncxrr"
                display="flex"
              >
                <span
                  aria-hidden="true"
                  className="css-1qnp08n"
                  display="flex"
                  height="sizeSquare50"
                  type="checkbox"
                  width="sizeSquare50"
                >
                  <span
                    className="css-1ls7lvh"
                    color="colorTextInverse"
                    display="block"
                    size="sizeIcon10"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby="CheckboxCheckIcon-15"
                      height="100%"
                      role="img"
                      viewBox="0 0 20 20"
                      width="100%"
                    >
                      <path
                        d="M15.59 5.916a1.386 1.386 0 00-1.98 0l-5.04 5.138L6.39 8.83a1.38 1.38 0 00-1.98 0 1.448 1.448 0 000 2.018l3.171 3.233a1.382 1.382 0 001.98 0l6.03-6.148a1.448 1.448 0 000-2.018z"
                        fill="currentColor"
                        fillRule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  className="css-pmq22s"
                  color="currentColor"
                  fontSize="fontSize30"
                  fontWeight="fontWeightNormal"
                >
                  I declare the information provided above is accurate. I acknowledge that Twilio will process the information provided above for the purpose of identity verification, and will be sharing it with my local telecomm providers or authorities where required by local law. I understand that Twilio phone numbers may be taken out of service for inaccurate or false information.
                </span>
              </span>
            </span>
          </span>
        </label>
      </div>
    </div>
    <button
      aria-busy="false"
      className="css-1kmjss9"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-18yvwyy"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots CheckboxGroup Basic 1`] = `
<div
  className="css-ql39e"
>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      className="css-9a3t89"
      name="campaign"
    >
      <legend
        className="css-1ruk2nu"
        display="block"
      >
        <span
          className="css-ken708"
          display="flex"
        >
          <span
            className="css-19tcioy"
            color="colorText"
            cursor="pointer"
            fontSize="fontSize30"
            fontWeight="fontWeightSemibold"
          >
            When should your campaign run?
          </span>
        </span>
      </legend>
      <div
        className="css-1wzbj38"
      >
        <div
          className="css-xts8rf"
          display="block"
        >
          <div
            className="css-1mfehrt"
            display="inline-flex"
          >
            <input
              aria-describedby="16"
              className="css-l5ph6c"
              clip="rect(0 0 0 0)"
              disabled={false}
              id="ongoing"
              name="campaign"
              onChange={[Function]}
              overflow="hidden"
              size="size0"
              type="checkbox"
              value="ongoing"
            />
            <label
              className="css-1ruk2nu"
              display="block"
              htmlFor="ongoing"
            >
              <span
                className="css-ken708"
                display="flex"
              >
                <span
                  className="css-19tcioy"
                  color="colorText"
                  cursor="pointer"
                  fontSize="fontSize30"
                  fontWeight="fontWeightSemibold"
                >
                  <span
                    className="css-sncxrr"
                    display="flex"
                  >
                    <span
                      aria-hidden="true"
                      className="css-1qnp08n"
                      display="flex"
                      height="sizeSquare50"
                      type="checkbox"
                      width="sizeSquare50"
                    >
                      <span
                        className="css-1ls7lvh"
                        color="colorTextInverse"
                        display="block"
                        size="sizeIcon10"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby="CheckboxCheckIcon-17"
                          height="100%"
                          role="img"
                          viewBox="0 0 20 20"
                          width="100%"
                        >
                          <path
                            d="M15.59 5.916a1.386 1.386 0 00-1.98 0l-5.04 5.138L6.39 8.83a1.38 1.38 0 00-1.98 0 1.448 1.448 0 000 2.018l3.171 3.233a1.382 1.382 0 001.98 0l6.03-6.148a1.448 1.448 0 000-2.018z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      className="css-pmq22s"
                      color="currentColor"
                      fontSize="fontSize30"
                      fontWeight="fontWeightNormal"
                    >
                      Run my ads as ongoing
                    </span>
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          className="css-xts8rf"
          display="block"
        >
          <div
            className="css-1mfehrt"
            display="inline-flex"
          >
            <input
              aria-describedby="18"
              className="css-l5ph6c"
              clip="rect(0 0 0 0)"
              disabled={false}
              id="enddate"
              name="campaign"
              onChange={[Function]}
              overflow="hidden"
              size="size0"
              type="checkbox"
              value="enddate"
            />
            <label
              className="css-1ruk2nu"
              display="block"
              htmlFor="enddate"
            >
              <span
                className="css-ken708"
                display="flex"
              >
                <span
                  className="css-19tcioy"
                  color="colorText"
                  cursor="pointer"
                  fontSize="fontSize30"
                  fontWeight="fontWeightSemibold"
                >
                  <span
                    className="css-sncxrr"
                    display="flex"
                  >
                    <span
                      aria-hidden="true"
                      className="css-1qnp08n"
                      display="flex"
                      height="sizeSquare50"
                      type="checkbox"
                      width="sizeSquare50"
                    >
                      <span
                        className="css-1ls7lvh"
                        color="colorTextInverse"
                        display="block"
                        size="sizeIcon10"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby="CheckboxCheckIcon-19"
                          height="100%"
                          role="img"
                          viewBox="0 0 20 20"
                          width="100%"
                        >
                          <path
                            d="M15.59 5.916a1.386 1.386 0 00-1.98 0l-5.04 5.138L6.39 8.83a1.38 1.38 0 00-1.98 0 1.448 1.448 0 000 2.018l3.171 3.233a1.382 1.382 0 001.98 0l6.03-6.148a1.448 1.448 0 000-2.018z"
                            fill="currentColor"
                            fillRule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      className="css-pmq22s"
                      color="currentColor"
                      fontSize="fontSize30"
                      fontWeight="fontWeightNormal"
                    >
                      Set a start and end date
                    </span>
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <button
      aria-busy="false"
      className="css-1kmjss9"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-18yvwyy"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Full Form Full Form 1`] = `
<div
  className="css-ql39e"
>
  <div
    className="css-won6u8"
    display="flex"
  >
    <div
      className="css-1s1sv6t"
      width="66.66666666666666%"
    >
      <h4
        className="css-mpusgd"
        color="colorText"
        display="block"
        fontSize="fontSize40"
        fontWeight="fontWeightBold"
      >
        react-hook-form-paste Form Demo
      </h4>
      <form
        onSubmit={[Function]}
      >
        <div
          className="css-1brb0pv"
          display="block"
        >
          <div
            className="css-10ak477"
          >
            <div
              className="css-roynbj"
            >
              <label
                className="css-1o3qgb0"
                display="block"
                htmlFor="emailAddress"
              >
                <span
                  className="css-ken708"
                  display="flex"
                >
                  <span
                    className="css-19tcioy"
                    color="colorText"
                    cursor="pointer"
                    fontSize="fontSize30"
                    fontWeight="fontWeightSemibold"
                  >
                    Email Address
                  </span>
                </span>
              </label>
              <div
                className="css-1kyjsrh"
                cursor="text"
                display="flex"
                width="100%"
              >
                <input
                  className="css-1enze02"
                  id="emailAddress"
                  name="emailAddress"
                  placeholder="example@twilio.com"
                  type="email"
                />
              </div>
            </div>
          </div>
          <div
            className="css-10ak477"
          >
            <div
              className="css-roynbj"
            >
              <label
                className="css-1o3qgb0"
                display="block"
                htmlFor="positiveNumber"
              >
                <span
                  className="css-ken708"
                  display="flex"
                >
                  <span
                    className="css-19tcioy"
                    color="colorText"
                    cursor="pointer"
                    fontSize="fontSize30"
                    fontWeight="fontWeightSemibold"
                  >
                    Positive Number
                  </span>
                </span>
              </label>
              <div
                className="css-1kyjsrh"
                cursor="text"
                display="flex"
                width="100%"
              >
                <input
                  aria-describedby="positiveNumberErrorHelpText"
                  className="css-1enze02"
                  id="positiveNumber"
                  name="positiveNumber"
                  pattern="[0-9]*"
                  placeholder="example@twilio.com"
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="css-10ak477"
          >
            <div
              className="css-roynbj"
            >
              <label
                className="css-1o3qgb0"
                display="block"
                htmlFor="message"
              >
                <span
                  className="css-ken708"
                  display="flex"
                >
                  <span
                    className="css-12n8l5w"
                    cursor="pointer"
                    display="block"
                    height="4px"
                    width="4px"
                  >
                    <span
                      className="css-1cbdvo6"
                      clip="rect(0 0 0 0)"
                      height="1px"
                      overflow="hidden"
                      width="1px"
                    >
                      Required: 
                    </span>
                  </span>
                  <span
                    className="css-19tcioy"
                    color="colorText"
                    cursor="pointer"
                    fontSize="fontSize30"
                    fontWeight="fontWeightSemibold"
                  >
                    Message (at least 40 characters)
                  </span>
                </span>
              </label>
              <div
                className="css-1kyjsrh"
                cursor="text"
                display="flex"
                width="100%"
              >
                <textarea
                  async={true}
                  className="css-pvxu5u"
                  id="message"
                  name="message"
                  onBlur={[Function]}
                  onChange={[Function]}
                  placeholder="Enter message"
                  rows={3}
                  spellCheck={true}
                  value=""
                />
              </div>
              <p
                className="css-1n4qplb"
                color="colorText"
                fontSize="fontSize30"
              >
                0
                 characters
              </p>
            </div>
          </div>
          <div
            className="css-10ak477"
          >
            <fieldset
              className="css-9a3t89"
              name="fruits"
            >
              <legend
                className="css-1ruk2nu"
                display="block"
              >
                <span
                  className="css-ken708"
                  display="flex"
                >
                  <span
                    className="css-19tcioy"
                    color="colorText"
                    cursor="pointer"
                    fontSize="fontSize30"
                    fontWeight="fontWeightSemibold"
                  >
                    Fruits
                  </span>
                </span>
              </legend>
              <div
                className="css-1wzbj38"
              >
                <div
                  className="css-xts8rf"
                  display="block"
                >
                  <div
                    className="css-1mfehrt"
                    display="inline-flex"
                  >
                    <input
                      aria-describedby="2"
                      className="css-l5ph6c"
                      clip="rect(0 0 0 0)"
                      disabled={false}
                      id="apples"
                      name="fruits"
                      onChange={[Function]}
                      overflow="hidden"
                      size="size0"
                      type="checkbox"
                      value="apple"
                    />
                    <label
                      className="css-1ruk2nu"
                      display="block"
                      htmlFor="apples"
                    >
                      <span
                        className="css-ken708"
                        display="flex"
                      >
                        <span
                          className="css-19tcioy"
                          color="colorText"
                          cursor="pointer"
                          fontSize="fontSize30"
                          fontWeight="fontWeightSemibold"
                        >
                          <span
                            className="css-sncxrr"
                            display="flex"
                          >
                            <span
                              aria-hidden="true"
                              className="css-1qnp08n"
                              display="flex"
                              height="sizeSquare50"
                              type="checkbox"
                              width="sizeSquare50"
                            >
                              <span
                                className="css-1ls7lvh"
                                color="colorTextInverse"
                                display="block"
                                size="sizeIcon10"
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby="CheckboxCheckIcon-3"
                                  height="100%"
                                  role="img"
                                  viewBox="0 0 20 20"
                                  width="100%"
                                >
                                  <path
                                    d="M15.59 5.916a1.386 1.386 0 00-1.98 0l-5.04 5.138L6.39 8.83a1.38 1.38 0 00-1.98 0 1.448 1.448 0 000 2.018l3.171 3.233a1.382 1.382 0 001.98 0l6.03-6.148a1.448 1.448 0 000-2.018z"
                                    fill="currentColor"
                                    fillRule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              className="css-pmq22s"
                              color="currentColor"
                              fontSize="fontSize30"
                              fontWeight="fontWeightNormal"
                            >
                              Apples
                            </span>
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="css-xts8rf"
                  display="block"
                >
                  <div
                    className="css-1mfehrt"
                    display="inline-flex"
                  >
                    <input
                      aria-describedby="4"
                      className="css-l5ph6c"
                      clip="rect(0 0 0 0)"
                      disabled={false}
                      id="oranges"
                      name="fruits"
                      onChange={[Function]}
                      overflow="hidden"
                      size="size0"
                      type="checkbox"
                      value="orange"
                    />
                    <label
                      className="css-1ruk2nu"
                      display="block"
                      htmlFor="oranges"
                    >
                      <span
                        className="css-ken708"
                        display="flex"
                      >
                        <span
                          className="css-19tcioy"
                          color="colorText"
                          cursor="pointer"
                          fontSize="fontSize30"
                          fontWeight="fontWeightSemibold"
                        >
                          <span
                            className="css-sncxrr"
                            display="flex"
                          >
                            <span
                              aria-hidden="true"
                              className="css-1qnp08n"
                              display="flex"
                              height="sizeSquare50"
                              type="checkbox"
                              width="sizeSquare50"
                            >
                              <span
                                className="css-1ls7lvh"
                                color="colorTextInverse"
                                display="block"
                                size="sizeIcon10"
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby="CheckboxCheckIcon-5"
                                  height="100%"
                                  role="img"
                                  viewBox="0 0 20 20"
                                  width="100%"
                                >
                                  <path
                                    d="M15.59 5.916a1.386 1.386 0 00-1.98 0l-5.04 5.138L6.39 8.83a1.38 1.38 0 00-1.98 0 1.448 1.448 0 000 2.018l3.171 3.233a1.382 1.382 0 001.98 0l6.03-6.148a1.448 1.448 0 000-2.018z"
                                    fill="currentColor"
                                    fillRule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              className="css-pmq22s"
                              color="currentColor"
                              fontSize="fontSize30"
                              fontWeight="fontWeightNormal"
                            >
                              Oranges
                            </span>
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <div
            className="css-10ak477"
          >
            <div
              className="css-12wrqhy"
            >
              <div
                className="css-1mfehrt"
                display="inline-flex"
              >
                <input
                  aria-describedby="6"
                  aria-invalid={false}
                  className="css-l5ph6c"
                  clip="rect(0 0 0 0)"
                  disabled={false}
                  id="disclaimer"
                  name="disclaimer"
                  onChange={[Function]}
                  overflow="hidden"
                  size="size0"
                  type="checkbox"
                />
                <label
                  className="css-1ruk2nu"
                  display="block"
                  htmlFor="disclaimer"
                >
                  <span
                    className="css-ken708"
                    display="flex"
                  >
                    <span
                      className="css-19tcioy"
                      color="colorText"
                      cursor="pointer"
                      fontSize="fontSize30"
                      fontWeight="fontWeightSemibold"
                    >
                      <span
                        className="css-sncxrr"
                        display="flex"
                      >
                        <span
                          aria-hidden="true"
                          className="css-1qnp08n"
                          display="flex"
                          height="sizeSquare50"
                          type="checkbox"
                          width="sizeSquare50"
                        >
                          <span
                            className="css-1ls7lvh"
                            color="colorTextInverse"
                            display="block"
                            size="sizeIcon10"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby="CheckboxCheckIcon-7"
                              height="100%"
                              role="img"
                              viewBox="0 0 20 20"
                              width="100%"
                            >
                              <path
                                d="M15.59 5.916a1.386 1.386 0 00-1.98 0l-5.04 5.138L6.39 8.83a1.38 1.38 0 00-1.98 0 1.448 1.448 0 000 2.018l3.171 3.233a1.382 1.382 0 001.98 0l6.03-6.148a1.448 1.448 0 000-2.018z"
                                fill="currentColor"
                                fillRule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          className="css-pmq22s"
                          color="currentColor"
                          fontSize="fontSize30"
                          fontWeight="fontWeightNormal"
                        >
                          By agreeing to this you accept the Terms and Conditions.
                        </span>
                      </span>
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            className="css-10ak477"
          >
            <fieldset
              className="css-9a3t89"
              id="campaign"
              name="campaign"
              onBlur={[Function]}
            >
              <legend
                className="css-1ruk2nu"
                display="block"
              >
                <span
                  className="css-ken708"
                  display="flex"
                >
                  <span
                    className="css-19tcioy"
                    color="colorText"
                    cursor="pointer"
                    fontSize="fontSize30"
                    fontWeight="fontWeightSemibold"
                  >
                    When should your campaign run?
                  </span>
                </span>
              </legend>
              <div
                className="css-1wzbj38"
              >
                <div
                  className="css-xts8rf"
                  display="block"
                >
                  <div
                    className="css-19wtf25"
                    display="inline-flex"
                  >
                    <input
                      aria-describedby="8"
                      aria-invalid={false}
                      checked={true}
                      className="css-l5ph6c"
                      clip="rect(0 0 0 0)"
                      disabled={false}
                      id="ongoing"
                      name="campaign"
                      onChange={[Function]}
                      overflow="hidden"
                      size="size0"
                      type="radio"
                      value="ongoing"
                    />
                    <label
                      className="css-1ruk2nu"
                      display="block"
                      htmlFor="ongoing"
                    >
                      <span
                        className="css-ken708"
                        display="flex"
                      >
                        <span
                          className="css-19tcioy"
                          color="colorText"
                          cursor="pointer"
                          fontSize="fontSize30"
                          fontWeight="fontWeightSemibold"
                        >
                          <span
                            className="css-sncxrr"
                            display="flex"
                          >
                            <span
                              aria-hidden="true"
                              className="css-j6zn3d"
                              display="flex"
                              height="sizeSquare50"
                              type="radio"
                              width="sizeSquare50"
                            >
                              <span
                                className="css-4g659b"
                                height="sizeSquare25"
                                width="sizeSquare25"
                              />
                            </span>
                            <span
                              className="css-pmq22s"
                              color="currentColor"
                              fontSize="fontSize30"
                              fontWeight="fontWeightNormal"
                            >
                              Run my ads as ongoing
                            </span>
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="css-xts8rf"
                  display="block"
                >
                  <div
                    className="css-19wtf25"
                    display="inline-flex"
                  >
                    <input
                      aria-describedby="9"
                      aria-invalid={false}
                      checked={false}
                      className="css-l5ph6c"
                      clip="rect(0 0 0 0)"
                      disabled={false}
                      id="enddate"
                      name="campaign"
                      onChange={[Function]}
                      overflow="hidden"
                      size="size0"
                      type="radio"
                      value="enddate"
                    />
                    <label
                      className="css-1ruk2nu"
                      display="block"
                      htmlFor="enddate"
                    >
                      <span
                        className="css-ken708"
                        display="flex"
                      >
                        <span
                          className="css-19tcioy"
                          color="colorText"
                          cursor="pointer"
                          fontSize="fontSize30"
                          fontWeight="fontWeightSemibold"
                        >
                          <span
                            className="css-sncxrr"
                            display="flex"
                          >
                            <span
                              aria-hidden="true"
                              className="css-j6zn3d"
                              display="flex"
                              height="sizeSquare50"
                              type="radio"
                              width="sizeSquare50"
                            >
                              <span
                                className="css-4g659b"
                                height="sizeSquare25"
                                width="sizeSquare25"
                              />
                            </span>
                            <span
                              className="css-pmq22s"
                              color="currentColor"
                              fontSize="fontSize30"
                              fontWeight="fontWeightNormal"
                            >
                              Set a start and end date
                            </span>
                          </span>
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <div
            className="css-10ak477"
          >
            <div
              className="css-roynbj"
            >
              <label
                className="css-1o3qgb0"
                display="block"
                htmlFor="callbackMethod"
              >
                <span
                  className="css-ken708"
                  display="flex"
                >
                  <span
                    className="css-19tcioy"
                    color="colorText"
                    cursor="pointer"
                    fontSize="fontSize30"
                    fontWeight="fontWeightSemibold"
                  >
                    Callback Method
                  </span>
                </span>
              </label>
              <div
                className="css-1kyjsrh"
                cursor="text"
                display="flex"
                width="100%"
              >
                <div
                  className="css-1p04ivx"
                  display="flex"
                  width="100%"
                >
                  <select
                    className="css-13zfrha"
                    color="inherit"
                    cursor="pointer"
                    data-not-selectize="true"
                    display="block"
                    fontFamily="inherit"
                    fontSize="fontSize30"
                    fontWeight="fontWeightNormal"
                    id="callbackMethod"
                    name="callbackMethod"
                    required={true}
                    size={0}
                    width="100%"
                  >
                    <option
                      className="css-1keq5ad"
                      color="inherit"
                      fontFamily="fontFamilyText"
                      value="get"
                    >
                      GET
                    </option>
                    <option
                      className="css-1keq5ad"
                      color="inherit"
                      fontFamily="fontFamilyText"
                      value="post"
                    >
                      POST
                    </option>
                    <option
                      className="css-1keq5ad"
                      color="inherit"
                      fontFamily="fontFamilyText"
                      value="put"
                    >
                      PUT
                    </option>
                  </select>
                  <div
                    className="css-o5gemw"
                    display="inline-flex"
                    pointerEvents="none"
                    transform="translateY(-50%)"
                  >
                    <span
                      className="css-1kzjb37"
                      color="colorTextIcon"
                      display="block"
                      size="sizeIcon30"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby="ChevronDownIcon-10"
                        height="100%"
                        role="img"
                        viewBox="0 0 20 20"
                        width="100%"
                      >
                        <path
                          d="M6.293 8.293a1 1 0 011.32-.083l.094.083L10 10.585l2.293-2.292a1 1 0 011.32-.083l.094.083a1 1 0 01.083 1.32l-.083.094-3 3a1 1 0 01-1.32.083l-.094-.083-3-3a1 1 0 010-1.414z"
                          fill="currentColor"
                          fillRule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-10ak477"
          >
            <div
              className="css-roynbj"
            >
              <label
                className="css-1o3qgb0"
                display="block"
                htmlFor="product"
              >
                <span
                  className="css-ken708"
                  display="flex"
                >
                  <span
                    className="css-12n8l5w"
                    cursor="pointer"
                    display="block"
                    height="4px"
                    width="4px"
                  >
                    <span
                      className="css-1cbdvo6"
                      clip="rect(0 0 0 0)"
                      height="1px"
                      overflow="hidden"
                      width="1px"
                    >
                      Required: 
                    </span>
                  </span>
                  <span
                    className="css-19tcioy"
                    color="colorText"
                    cursor="pointer"
                    fontSize="fontSize30"
                    fontWeight="fontWeightSemibold"
                  >
                    Product offering
                  </span>
                </span>
              </label>
              <div
                className="css-1kyjsrh"
                cursor="text"
                display="flex"
                width="100%"
              >
                <div
                  className="css-1p04ivx"
                  display="flex"
                  width="100%"
                >
                  <select
                    className="css-13zfrha"
                    color="inherit"
                    cursor="pointer"
                    data-not-selectize="true"
                    display="block"
                    fontFamily="inherit"
                    fontSize="fontSize30"
                    fontWeight="fontWeightNormal"
                    id="product"
                    name="product"
                    required={true}
                    size={0}
                    width="100%"
                  >
                    <optgroup
                      className="css-1jn1qfl"
                      color="inherit"
                      fontFamily="fontFamilyText"
                      fontStyle="normal"
                      fontWeight="fontWeightMedium"
                      label="SMS"
                    >
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="geomatch"
                      >
                        Area-code geomatch
                      </option>
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="channels"
                      >
                        Channels
                      </option>
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="short-codes"
                      >
                        Short codes
                      </option>
                    </optgroup>
                    <optgroup
                      className="css-1jn1qfl"
                      color="inherit"
                      fontFamily="fontFamilyText"
                      fontStyle="normal"
                      fontWeight="fontWeightMedium"
                      label="Voice"
                    >
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="conference"
                      >
                        Conference
                      </option>
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="recording"
                      >
                        Recordings
                      </option>
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="tts"
                      >
                        Text to Speech
                      </option>
                    </optgroup>
                    <optgroup
                      className="css-1jn1qfl"
                      color="inherit"
                      fontFamily="fontFamilyText"
                      fontStyle="normal"
                      fontWeight="fontWeightMedium"
                      label="Video"
                    >
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="hipaa"
                      >
                        HIPAA eligibility
                      </option>
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="p2p"
                      >
                        Peer to peer
                      </option>
                      <option
                        className="css-1keq5ad"
                        color="inherit"
                        fontFamily="fontFamilyText"
                        value="recordings"
                      >
                        Recordings
                      </option>
                    </optgroup>
                  </select>
                  <div
                    className="css-o5gemw"
                    display="inline-flex"
                    pointerEvents="none"
                    transform="translateY(-50%)"
                  >
                    <span
                      className="css-1kzjb37"
                      color="colorTextIcon"
                      display="block"
                      size="sizeIcon30"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby="ChevronDownIcon-11"
                        height="100%"
                        role="img"
                        viewBox="0 0 20 20"
                        width="100%"
                      >
                        <path
                          d="M6.293 8.293a1 1 0 011.32-.083l.094.083L10 10.585l2.293-2.292a1 1 0 011.32-.083l.094.083a1 1 0 01.083 1.32l-.083.094-3 3a1 1 0 01-1.32.083l-.094-.083-3-3a1 1 0 010-1.414z"
                          fill="currentColor"
                          fillRule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="css-14qjmy2"
                display="flex"
              >
                <div
                  className="css-8wof1k"
                  color="colorTextWeak"
                  fontSize="fontSize30"
                >
                  Select a product to learn more.
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-roynbj"
          >
            <button
              aria-busy="false"
              className="css-1kmjss9"
              color="colorTextInverse"
              cursor="pointer"
              disabled={false}
              display="inline-block"
              fontFamily="fontFamilyText"
              fontSize="fontSize30"
              fontWeight="fontWeightSemibold"
              textDecoration="none"
              type="submit"
              width="auto"
            >
              <span
                aria-hidden="false"
                className="css-18yvwyy"
                display="flex"
                opacity="1"
                textDecoration="inherit"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      className="css-xnxrih"
      width="33.33333333333333%"
    >
      <article
        className="css-1h7hihl"
      >
        <h4
          className="css-mpusgd"
          color="colorText"
          display="block"
          fontSize="fontSize40"
          fontWeight="fontWeightBold"
        >
          Form Payload
        </h4>
        <pre
          className="css-1kpd10m"
          color="colorText"
          fontSize="fontSize30"
          overflow="auto"
        >
          {
    "message": "",
    "fruits": [],
    "campaign": "ongoing",
    "callbackMethod": "get"
}
        </pre>
      </article>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Basic 1`] = `
<div
  className="css-ql39e"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1o3qgb0"
      display="block"
      htmlFor="emailAddress"
    >
      <span
        className="css-ken708"
        display="flex"
      >
        <span
          className="css-19tcioy"
          color="colorText"
          cursor="pointer"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
        >
          Email Address
        </span>
      </span>
    </label>
    <div
      className="css-1kyjsrh"
      cursor="text"
      display="flex"
      width="100%"
    >
      <input
        className="css-1enze02"
        id="emailAddress"
        name="emailAddress"
        placeholder="example@twilio.com"
        type="email"
      />
    </div>
    <button
      aria-busy="false"
      className="css-1kmjss9"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-18yvwyy"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots RadioGroup Basic 1`] = `
<div
  className="css-ql39e"
>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      className="css-9a3t89"
      id="campaign"
      name="campaign"
      onBlur={[Function]}
    >
      <legend
        className="css-1ruk2nu"
        display="block"
      >
        <span
          className="css-ken708"
          display="flex"
        >
          <span
            className="css-19tcioy"
            color="colorText"
            cursor="pointer"
            fontSize="fontSize30"
            fontWeight="fontWeightSemibold"
          >
            When should your campaign run?
          </span>
        </span>
      </legend>
      <div
        className="css-1wzbj38"
      >
        <div
          className="css-xts8rf"
          display="block"
        >
          <div
            className="css-19wtf25"
            display="inline-flex"
          >
            <input
              aria-describedby="20"
              aria-invalid={false}
              checked={false}
              className="css-l5ph6c"
              clip="rect(0 0 0 0)"
              disabled={false}
              id="ongoing"
              name="campaign"
              onChange={[Function]}
              overflow="hidden"
              size="size0"
              type="radio"
              value="ongoing"
            />
            <label
              className="css-1ruk2nu"
              display="block"
              htmlFor="ongoing"
            >
              <span
                className="css-ken708"
                display="flex"
              >
                <span
                  className="css-19tcioy"
                  color="colorText"
                  cursor="pointer"
                  fontSize="fontSize30"
                  fontWeight="fontWeightSemibold"
                >
                  <span
                    className="css-sncxrr"
                    display="flex"
                  >
                    <span
                      aria-hidden="true"
                      className="css-j6zn3d"
                      display="flex"
                      height="sizeSquare50"
                      type="radio"
                      width="sizeSquare50"
                    >
                      <span
                        className="css-4g659b"
                        height="sizeSquare25"
                        width="sizeSquare25"
                      />
                    </span>
                    <span
                      className="css-pmq22s"
                      color="currentColor"
                      fontSize="fontSize30"
                      fontWeight="fontWeightNormal"
                    >
                      Run my ads as ongoing
                    </span>
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          className="css-xts8rf"
          display="block"
        >
          <div
            className="css-19wtf25"
            display="inline-flex"
          >
            <input
              aria-describedby="21"
              aria-invalid={false}
              checked={false}
              className="css-l5ph6c"
              clip="rect(0 0 0 0)"
              disabled={false}
              id="enddate"
              name="campaign"
              onChange={[Function]}
              overflow="hidden"
              size="size0"
              type="radio"
              value="enddate"
            />
            <label
              className="css-1ruk2nu"
              display="block"
              htmlFor="enddate"
            >
              <span
                className="css-ken708"
                display="flex"
              >
                <span
                  className="css-19tcioy"
                  color="colorText"
                  cursor="pointer"
                  fontSize="fontSize30"
                  fontWeight="fontWeightSemibold"
                >
                  <span
                    className="css-sncxrr"
                    display="flex"
                  >
                    <span
                      aria-hidden="true"
                      className="css-j6zn3d"
                      display="flex"
                      height="sizeSquare50"
                      type="radio"
                      width="sizeSquare50"
                    >
                      <span
                        className="css-4g659b"
                        height="sizeSquare25"
                        width="sizeSquare25"
                      />
                    </span>
                    <span
                      className="css-pmq22s"
                      color="currentColor"
                      fontSize="fontSize30"
                      fontWeight="fontWeightNormal"
                    >
                      Set a start and end date
                    </span>
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <button
      aria-busy="false"
      className="css-1kmjss9"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-18yvwyy"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Select Basic 1`] = `
<div
  className="css-ql39e"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1o3qgb0"
      display="block"
      htmlFor="callbackMethod"
    >
      <span
        className="css-ken708"
        display="flex"
      >
        <span
          className="css-19tcioy"
          color="colorText"
          cursor="pointer"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
        >
          Callback Method
        </span>
      </span>
    </label>
    <div
      className="css-1kyjsrh"
      cursor="text"
      display="flex"
      width="100%"
    >
      <div
        className="css-1p04ivx"
        display="flex"
        width="100%"
      >
        <select
          className="css-13zfrha"
          color="inherit"
          cursor="pointer"
          data-not-selectize="true"
          display="block"
          fontFamily="inherit"
          fontSize="fontSize30"
          fontWeight="fontWeightNormal"
          id="callbackMethod"
          name="callbackMethod"
          required={true}
          size={0}
          width="100%"
        >
          <option
            className="css-1keq5ad"
            color="inherit"
            fontFamily="fontFamilyText"
            value="get"
          >
            GET
          </option>
          <option
            className="css-1keq5ad"
            color="inherit"
            fontFamily="fontFamilyText"
            value="post"
          >
            POST
          </option>
          <option
            className="css-1keq5ad"
            color="inherit"
            fontFamily="fontFamilyText"
            value="put"
          >
            PUT
          </option>
        </select>
        <div
          className="css-o5gemw"
          display="inline-flex"
          pointerEvents="none"
          transform="translateY(-50%)"
        >
          <span
            className="css-1kzjb37"
            color="colorTextIcon"
            display="block"
            size="sizeIcon30"
          >
            <svg
              aria-hidden={true}
              aria-labelledby="ChevronDownIcon-22"
              height="100%"
              role="img"
              viewBox="0 0 20 20"
              width="100%"
            >
              <path
                d="M6.293 8.293a1 1 0 011.32-.083l.094.083L10 10.585l2.293-2.292a1 1 0 011.32-.083l.094.083a1 1 0 01.083 1.32l-.083.094-3 3a1 1 0 01-1.32.083l-.094-.083-3-3a1 1 0 010-1.414z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <button
      aria-busy="false"
      className="css-1kmjss9"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-18yvwyy"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots TextArea Basic 1`] = `
<div
  className="css-ql39e"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1o3qgb0"
      display="block"
      htmlFor="message"
    >
      <span
        className="css-ken708"
        display="flex"
      >
        <span
          className="css-12n8l5w"
          cursor="pointer"
          display="block"
          height="4px"
          width="4px"
        >
          <span
            className="css-1cbdvo6"
            clip="rect(0 0 0 0)"
            height="1px"
            overflow="hidden"
            width="1px"
          >
            Required: 
          </span>
        </span>
        <span
          className="css-19tcioy"
          color="colorText"
          cursor="pointer"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
        >
          Message (at least 40 characters)
        </span>
      </span>
    </label>
    <div
      className="css-1kyjsrh"
      cursor="text"
      display="flex"
      width="100%"
    >
      <textarea
        async={true}
        className="css-pvxu5u"
        id="message"
        name="message"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Enter message"
        rows={3}
        spellCheck={true}
        value=""
      />
    </div>
    <p
      className="css-1n4qplb"
      color="colorText"
      fontSize="fontSize30"
    >
      0
       characters
    </p>
    <button
      aria-busy="false"
      className="css-w1yekc"
      color="colorTextInverse"
      cursor="not-allowed"
      disabled={true}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-18yvwyy"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;
